src/main/java/com/example/demo/error/NotFoundException.java
package com.example.demo.error;

public class NotFoundException extends RuntimeException {
  public NotFoundException(String message) {
    super(message);
  }
}
